[package]
name = "timexif"
version = "0.1.0"
authors = ["Dominic van Berkel <dominic@baudvine.net>"]
repository = "https://github.com/barometz/timexif"
license = "MIT"

[[bin]]
name = "timexif"
doc = false

[lib]
name = "timexif"
doc = true

[dependencies]
chrono = "0.2.19"
jpeg-decoder = "0.1.3"
rexif = "0.3.3"
walkdir = "0.1.5"
